--- a/index.html
+++ b/index.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/main.css">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="styles/main.css">
     <title>Russ for 3</title>
 </head>
 <body>
-    <figure>
-    <a href="pages/projects.html"> Go to Second Page</a>
+    <ul>
+        <li><a href="Enter link">Homepage</a></li>
+        <li><a href="Enter link">Projects</a></li>
+        <li><a href="Enter link">Tech Experience</a></li>
+        <script src="scripts/main.js"></script>
+    </ul>
+        <figure>
+            <a href="index.html"> About Me </a>
+            <a href="pages/projects.html"> Projects </a>
+            <a href="/""
     <figcaption>Thunder at Wizards 2/13/17 by Keith Allison from Hanover, MD, USA</figcaption>
     <figure>
 <body>
