--- a/pages/home-page.html
+++ b/pages/home-page.html
@@ -13,7 +13,7 @@
     <!--Navbar-->
         
         <div class="Nav">
-            <button>
+            <button class="message" onclick="message ()">Alert</button>>
                 <a style="text-align: center; 
                 color: #AC3B61; 
                 font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;"
