--- a/pages/home-page.html
+++ b/pages/home-page.html
@@ -14,6 +14,7 @@
         
         <div class="Nav">
             <button class="message" onclick="message ()">Alert</button>>
+            <button>
                 <a style="text-align: center; 
                 color: #AC3B61; 
                 font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;"
