--- a/pages/projects.html
+++ b/pages/projects.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script src="../scripts/main.js"></script>
         <link rel="stylesheet" href="../styles/main.css">
         <title>The Portfolio of the Gods</title>
         <h1>Projects/Assignments (90s would be greatly appreciated!)</h1>
@@ -13,7 +14,6 @@
     <!--Navbar-->
         
         <div class="Nav">
-            <button class="message" onclick="message ()">Alert</button>>
             <button>
                 <a style="text-align: center; 
                 color: #AC3B61; 
@@ -49,6 +49,9 @@
         <img src="../images/WifiDino.jpg" width="600"></img>
         <p>Coming soon!</p>
     </border>
+
+    <button class="message" onclick="message ()">Alert</button>>
+
     <body>
         <br></br>
         <br></br>
