--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 color: #AC3B61; 
                 font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
                 background-color: #EDC7B7;" 
-                href="home-page.html" class="op">Home Page</a>
+                href="/pages/home-page.html" class="op">Home Page</a>
             </button>
             <button>
                 <a style="text-align: center; 
@@ -30,13 +30,13 @@
                 <a style="text-align: center; 
                 color: #AC3B61; 
                 font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;" 
-                href="experiences.html" class="op"> Tech Experiences</a>
+                href="/pages/experiences.html" class="op"> Tech Experiences</a>
             </button>
             <button>
                 <a style="text-align: center; 
                 color: #AC3B61; 
                 font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;" 
-                href="projects.html" class="op"> Assignments</a>
+                href="/pages/projects.html" class="op"> Assignments</a>
             </button>
         </div>
     </nav>
