--- a/pages/home-page.html
+++ b/pages/home-page.html
@@ -23,7 +23,7 @@
                 <a style="text-align: center; 
                 color: #AC3B61; 
                 font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;"
-                href="index.html" class="op"> About Me</a>
+                href="../index.html" class="op"> About Me</a>
             </button>
             <button>
                 <a style="text-align: center; 
