--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="../styles/main.css">
+        <script src="scripts/main.js"></script>
+        <link rel="stylesheet" href="styles/main.css">
         <title>The Portfolio of the Gods</title>
         <h1>About Me</h1>
     </head>
