--- a/pages/experiences.html
+++ b/pages/experiences.html
@@ -46,7 +46,7 @@
 
     <!--Text-->
     <border>
-        <img src="../images/1125px-Artificial_Intelligence,_AI.jpg"width="600"></img>
+        <img src="../images/1125px-Artificial_Intelligence,_AI.jpg"600"></img>
         <p>I don’t have much tech experience at this point but I was part of the design and electrical 
             team in robotics. The previous team didn’t teach us about buying or assembling the robot 
             from scratch and we could only plan out the robot without building but I did have a lot of 
