--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
         <!--Text-->
         <border>
-            <img src="../images/hello.jpg"width="800"></img>
+            <img src="/images/hello.jpg"800></img>
             <p>Hello, I am a high school student 
             interested in pursuing a career in software engineering and my university major of choice 
             is computer science or computer engineering. I was teaching myself coding before this course 
@@ -71,7 +71,7 @@
         <h2>Role Models</h2>
 
         <border>
-            <img src="../images/Russell_Westbrook_(32077032673).jpg" height="500px"></img>
+            <img src="/images/Russell_Westbrook_(32077032673).jpg" height="500px"></img>
             <figcaption>By: Keith Allison from Hanover, MD, USA</figcaption>
             <p>This is one of my biggest 
             role models and his name is Russell Westbrook. He's an NBA point guard currently playing for
