--- a/pages/home-page.html
+++ b/pages/home-page.html
@@ -17,8 +17,9 @@
             <button>
                 <a style="text-align: center; 
                 color: #AC3B61; 
-                font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;"
-                href="index.html" class="op"> Home Page</a>
+                font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+                background-color: #EDC7B7;" 
+                href="home-page.html" class="op">Home Page</a>
             </button>
             <button>
                 <a style="text-align: center; 
@@ -49,6 +50,12 @@
         <h2>Hello and welcome to my website! I'll be posting my assignments from school. Hope you 
         enjoy!</h2>
     </border>
+
+    <border>
+        <img src="../images/Chess Elo.jpg" width="200"></img>
+        <p>My chess elo right now on chess.com</p>
+    </border>
+
     <body>
         <br></br>
         <br></br>
