--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
             <button>
                 <a style="text-align: center; 
                 color: #AC3B61; 
-                font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-                background-color: #EDC7B7;" 
+                font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;" 
                 href="pages/home-page.html" class="op">Home Page</a>
             </button>
             <button>
