--- a/pages/home-page.html
+++ b/pages/home-page.html
@@ -52,6 +52,7 @@
 
     <border>
         <img src="../images/Chess Elo.jpg" width="200"></img>
+        <img src="../images/Chess Elo.jpg" height="400"></img>
         <p>My chess elo right now on chess.com</p>
     </border>
 
